app/assets/stylesheets/media_queries.css.scss
//////
///////// Media Queries
//////

//Full size, smaller monitor
@media (max-width:1250px) AND (min-width:$contentMin) {
	#mainFoot span {
		margin-left:.8%;
		font-size:.8em;
	}
	#mainFoot {
		padding:0 1em;
	}
}
@media (max-width:980px) AND (min-device-width:768px) {
	#mainNav {
		margin-top:4px;
		li {
			padding:.5em 0;
			a{
				font-size:1em;
			}
			#avidLogo{
				max-height:15px;
			}
		}
	}
	#footCopy{
		width:100%;
		span{
			font-size:.9em;
			float:none;
			margin:0;
			&::after{
				content:"\00a0\00a0\00a0"
			}
		}
	}
	#fGroup1, #fGroup2{
		width: -moz-fit-content;
	  width: -webkit-fit-content;
	  width: fit-content;
		margin:0 auto;
	}
	#fGroup2{
		margin:.35em auto;
	}
	#footSocial{
		position:relative;
		left:50%;
		margin-left:-60px;
	}
	.slideCopy{bottom:230px;}
}
@media (max-width:825px){
	#logo {
		width:100%;
		a{margin:0 auto;}
	}
	#mainNavRow{
		width:100%;
	}
	#mainNav{
		width:100%;
		text-align:center;
	}
	.stackNav{top:105px}
	.defaultSlide, .defaultSlide2 {
		.slideContent{
			padding-top:55px;
		}
	}
}
@media (max-width:767px) AND (min-device-width:768px){
	body > *, #homePage > * {
		min-width:$contentMin;
	}
}

////////Tablet Styles
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : portrait) {
	#logo, #mainNavRow {
		width:100%;
	}
	#homeSlider{
		position:relative;
		width:100%;
		min-height:320px;
		margin-bottom:0;
		@include defaultBackground;
	}
	.homeSlide{
		background-size:130% auto;
		background-position:50% 30%;
	}
	.pdfList li{height:175px;}
	#avidTabs .staticContent{padding-top:45px;}
}

////////Mobile Styles
@media (min-device-width:768px) {
	.onlyMobile{display:none !important;}
	#contactPage{
		@extend .gradientBack2;
	}
}
@media (max-device-width: 767px) {
	.noMobile{display:none !important;}
	.onlyMobile{display:block;}

	html, body{
		overflow-x:hidden;
		width:100%;
	}
	#mainHead, #mainContent, #mainFoot{
		position:static;
		width:100%;
		min-width:0px;
	}
	#mainHead{
		position:relative;
		top:0;
		z-index:25;
		height:auto;
		padding:5px 2%;
		box-shadow:none;
	}
	#logo{
		width:100%;
		float:none;
	}
	.mobileNavTrigger{
		position:absolute;
		top:14px;
		opacity:.5;
		width:22px;
		height:auto;
	}
	#mainNav{
		display:none;
	}
	#jPanelMenu-menu{
		background-color:rgb(50,50,50);
		ul {
			padding:5px;
			li {
				font-size:1.5em;
				font-weight:bold;
				margin-bottom:5px;
				a{
					color:white;
				}
				a:hover{color:rgb(200,200,200) !important;}
			}
		}
	}
	#mainContent{
		width:100%;
		padding-bottom:0px;
	}
	#mainFoot{
		height:auto;
		min-height:210px;
		box-shadow: none;
		#footCopy{
			width:100%;
			span{margin:.1em 0;}
		}
		>span{
				width:100%;
				text-align:center;
				margin-top:5px;
			}
		#fGroup1,#fGroup2{
			float: left;
		}
		#fGroup1{
			width:58%;
			margin:-8px 2% 0 0;
			span{
				font-size:1.3em;
				text-align: left;
			}
		}
		#fGroup2{
			width:40%;
			span{
				text-align:left;
				width:100%;
				a{color:#50b0c5;}
			}
		}
		#footSocial{
			margin:0 auto;
			padding-top:1em;
			float:none;
			clear:both;
		}
	}
	//Home Page
	#homePage{
		position:static;
		top:0;
		left:0;
		right:0;
	}
	.homeNavList, .homeNavThumb{
		display:none;
	}
	#homeSlider{
		position:relative;
		width:100%;
		min-height:320px;
		margin-bottom:0;
		@include defaultBackground;
	}
	.homeSlide{
		background-size:130% auto;
	}
	.slideCopy{
		position:absolute;
		left:0;
		right:0;
		bottom:1em;
		margin:0 5%;
		width:90%;
		height: auto;
		overflow-y: hidden;
		h2, p {
			color:white;
			margin:.5em 0;
			padding:0;
			line-height:1em;
		}
		h2{font-size:1.2em;}
		p{font-size:1em;}
	}
	//Stack Pages
	.featured > li {
		list-style:none;
		width:100%;
		min-height:300px;
		clear:both;
		.slideContent{
			min-width:0px;
			width:100%;
		}
		h1,h2,h3,h4,h5,h6,a{
			text-align:center;
		}
		p{text-align:left;}
		&.defaultSlide{
			img{
				width:40%;
			}
		}
	}
	.stackPage{
		overflow-y:visible;
		.slideContent{
			padding-top:20px;
			position:static;
			top:0;
		}
	}
	#wwd1{
		h1{
			padding:15px 5px;
			background-color:rgba(0,0,0,.5);
			border-radius:3px;
			width:94%;
			margin:0 3%;
		}
		.slideContent{
			padding-top:20px;
		}
	}
	.wwd1Copy{
		width:94%;
		float:none;
		margin:10px 3%;
		&:nth-child(2){
			margin:10px 3%;
		}
		h2{
			font-size:2.5em;
			font-weight:bold;
		}
	}
	.stackNav{
		display:none;
	}
	//Static Page
	.staticPage{
		padding: 0px 0 10px;
		position:relative;
		min-height:320px;
	}
	.staticContent{
		overflow-y:visible;
	}
	//About (who we are)
	#about3Bios{
		position:static;
		overflow-y:visible;
		max-width:100%;
	}
	.employeeContact{
		width:100%;
		display:block;
		margin:0;
		h4, p {text-align:center !important;}
		h4{
			font-size:2em;
			margin:.2em 0 !important;
		}
		p{font-size:1.3em;}
		a{color:#50b0c5;}
	}
	//Gallery
	.wpGallery.block-grid.four-up{
		li{
			width:46%;
			margin:0 2% 2em;
			padding:15px 10px 60px;
		}
	}
	//Events
	#eventSlider.orbit{
		overflow:visible;
	}
	.eventSlide{
		.eventContent{
			height:100%;
			max-width:100%;
			margin:0;
			padding:0 2%;
			overflow-y:visible;
		}
		.eventCaption{
			position:static;
			width:100%;
			max-width:inherit;
			h2, h4, p{
				width:100%;
				text-align:center;
				padding:0;
			}
			h2{
				font-size:2.5em;
				text-transform: capitalize;
			}
			p{font-size:1.35em;}
		}
		.eventLinks{
			width:100%;
			max-width:inherit;
			position:static;
			text-align:center;
			list-style: none;
			a{
				font-size:1.25em;
				margin-top:.15em;
			}
		}
	}
	//Careers
	#mobileCareers {
		margin-top:0px;
		padding-top:27%;
	}
	//Contact Page
	#mobileContact {
		a {
			color:white;
		}
	}
	#mobileContactInfo {
		text-align:center;
	}
	//Avid Corner
	#avidLinks {
		margin:0;
		> div {
			display:block;
			width:90%;
			margin:1em auto;
			&:nth-child(2){margin:0 auto;}
		}
	}
	#avidTabs{
		.tabs {
			margin-top:0px;
			dd {
				width:100% !important;
			}
		}
	}
	#avidStories{position:static;}
	.sideQuote{
		width:90%;
		display:block;
		margin:1em auto;
		clear:both;
		top:0px;
		margin-bottom:15px;
	}
	.pFloat{
		width:100%;
		margin-right:0;
		float:none;
	}
}
@media (max-device-width:767px) AND (orientation:landscape) {
	#fGroup2 span{
		text-align:right;
	}
}
//end mobile styles

